--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -48,7 +48,7 @@ on property:twrp.modules.loaded=true
     write /sys/kernel/boot_adsp/boot 1
     wait /sys/class/power_supply/battery
     start health-hal-2-1
-    start vibratorfeature-hal-service
+    start realme.vibrator
     umount /firmware
 
 service modules_mount /system/bin/modules_mount.sh
